--- a/index.html
+++ b/index.html
@@ -266,16 +266,7 @@
 
 
                                                              <!-- Footer End -->
-    <script>
-
-    let load = document.getElementById('preLoader');
-    window.addEventListener("load",function(){
-       window.setTimeout(() => {
-        load.style.display = "none";
-       }, 2000);
-    } )
-
-    </script>
+    <script src="script/index.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
