--- a/wallet.html
+++ b/wallet.html
@@ -823,7 +823,7 @@
                          </div>
                          <div class="col-md-3 col-sm-6">
                             <div  class="wallet-card" id="wallet-card">
-                  c      <button  class="image-button"><a href="#">
+                       <button  class="image-button"><a href="#">
 
                                
                             <img class="wallet-image" src="images/safepal.jpg" alt="">
