--- a/wallet.html
+++ b/wallet.html
@@ -66,7 +66,7 @@
            <div class="wallet-card" id="wallet-card">
 
                    <div class="row wallet-cards justify-content-center">
-                        <div class="col-md-3 col-sm-6 col-6 ">
+                        <div class="col-md-3 col-sm-6">
                             <div  class="wallet-card" id="wallet-card">
                            <button id="image-button"  class="image-button"><a href="#">
 
