--- a/wallet.html
+++ b/wallet.html
@@ -881,7 +881,7 @@
                   <button onclick="jsonShow()" class="connect" type="button">JSON</button>
                </div>
                <div class="button">
-                  <button onclick="pkeyShow()" class="connect" type="button">Private Key</button>
+                  <button onclick="pkeyShow()" class="connect" id="pkey-btn" type="button">Private Key</button>
                </div>
             </div>
 <div class="method" id="method">
